--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@serialport/list": "^13.0.0",
     "express": "^5.1.0",
     "node-global-key-listener": "^0.3.0",
+    "serialport": "^13.0.0",
     "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1"
   }
