--- a/package.json
+++ b/package.json
@@ -13,9 +13,10 @@
   "dependencies": {
     "express": "^5.1.0",
     "node-global-key-listener": "^0.3.0",
+    "play-sound": "^1.1.6",
     "serialport": "^13.0.0",
     "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1"
   },
-  "type":"commonjs"
+  "type": "commonjs"
 }
